baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_numeric_literal_method_call/hir.snap
---
source: crates/baml_tests/src/corpus.rs
---
=== HIR ===
function user.fixtures.numeric_literal_method_call.BigintToStringBareLiteral() -> string  [expr] {
  {  } 42n.to_string()
}
function user.fixtures.numeric_literal_method_call.FloatFloorBareLiteral() -> float  [expr] {
  {  } 2.5.floor()
}
function user.fixtures.numeric_literal_method_call.IntAbsBareLiteral() -> int  [expr] {
  {  } 3.abs()
}
function user.fixtures.numeric_literal_method_call.IntPowBareLiteral() -> int  [expr] {
  {  } 2.pow(3)
}
function user.fixtures.numeric_literal_method_call.IntToStringBareLiteral() -> string  [expr] {
  {  } 7.to_string()
}
