baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_numeric_literal_method_call/mir.snap
---
source: crates/baml_tests/src/corpus.rs
---
=== MIR2 ===
fn user.fixtures.numeric_literal_method_call.IntToStringBareLiteral() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: reflect.Type

    bb0: {
        _1 = load_type(7);
        _0 = call const fn baml.String.from<copy _1>(const 7_i64) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.fixtures.numeric_literal_method_call.IntAbsBareLiteral() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        _0 = call const fn baml.Int.abs(const 3_i64) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.fixtures.numeric_literal_method_call.IntPowBareLiteral() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        _0 = call const fn baml.Int.pow(const 2_i64, const 3_i64) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.fixtures.numeric_literal_method_call.FloatFloorBareLiteral() -> float {
    // Locals:
    let _0: float // _0 // return

    bb0: {
        _0 = call const fn baml.Float.floor(const 2.5_f64) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.fixtures.numeric_literal_method_call.BigintToStringBareLiteral() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: reflect.Type

    bb0: {
        _1 = load_type(42n);
        _0 = call const fn baml.String.from<copy _1>(const 42n) -> [bb1];
    }

    bb1: {
        return;
    }
}
