baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_numeric_literal_method_call/numeric_literal_method_call.fmt.snap
---
source: crates/baml_tests/src/corpus.rs
---
// Regression snapshot for B-614: a method called directly on a *bare* numeric
// literal receiver (no wrapping parentheses). The parser emits the literal as a
// bare token under the FIELD_ACCESS_EXPR, and AST lowering used to gate base
// extraction on `is_ident_token`, dropping the literal and lowering the receiver
// to `Expr::Missing` (typed `never`). That made `.to_string()` panic at runtime
// with "parse error" and `.abs()` / `.floor()` fail to type-check (E0007).
//
// The 03_hir / 04_tir snapshots must show the member-access base as the literal
// itself (Int 7 / Int 3 / Float 2.5 / Bigint 42), NOT `Expr::Missing`, and the
// 06_codegen snapshot must contain no "parse error" panic for these receivers.

function IntToStringBareLiteral() -> string {
    7.to_string()
}

function IntAbsBareLiteral() -> int {
    3.abs()
}

function IntPowBareLiteral() -> int {
    2.pow(3)
}

function FloatFloorBareLiteral() -> float {
    2.5.floor()
}

function BigintToStringBareLiteral() -> string {
    42n.to_string()
}
